@@ -1,3 +1,8 @@
+2005-12-16  Sam Steingold  <sds@gnu.org>
+
+	* makemake.in (clisp.dvi, clisp.ps, clisp.pdf): I am sick of telling
+	people to ignore clisp.dvi errors, so now these errors are ignored
+
 2005-12-16  Dr. Werner Fink  <werner@suse.de>
 	    Sam Steingold  <sds@gnu.org>
 
